check for NULL return from malloc is testing wrong variable name.

XMLWordPrintable

    • 2d
    • b47
    • generic
    • generic

      lcdglyph.c tests to see if malloc returns NULL but unfortunately the
      test looks like "if (malloc == NULL)", instead of "if (ptr == NULL)"

      Since its only an issue if malloc had actually failed and this is
      not particularly likely, this doesn't seem to have posed a problem
      in the 4 or 5 years the code has been in production, but clearly
      still merits a fix.

            Assignee:
            Philip Race
            Reporter:
            Philip Race
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: