7164282: check for NULL return from malloc is testing wrong variable name

Reviewed-by: igor, flar